@@ -63,6 +63,7 @@ CHECK_PMD_THREADS_CREATED()
 
 AT_CHECK([ovs-appctl dpif-netdev/pmd-rxq-show | sed SED_NUMA_CORE_PATTERN], [0], [dnl
 pmd thread numa_id <cleared> core_id <cleared>:
+	isolated : false
 	port: p0	queue-id: 0
 ])
 
@@ -93,6 +94,7 @@ dummy@ovs-dummy: hit:0 missed:0
 
 AT_CHECK([ovs-appctl dpif-netdev/pmd-rxq-show | sed SED_NUMA_CORE_PATTERN], [0], [dnl
 pmd thread numa_id <cleared> core_id <cleared>:
+	isolated : false
 	port: p0	queue-id: 0 1 2 3 4 5 6 7
 ])
 
@@ -116,6 +118,7 @@ dummy@ovs-dummy: hit:0 missed:0
 
 AT_CHECK([ovs-appctl dpif-netdev/pmd-rxq-show | sed SED_NUMA_CORE_PATTERN], [0], [dnl
 pmd thread numa_id <cleared> core_id <cleared>:
+	isolated : false
 	port: p0	queue-id: 0 1 2 3 4 5 6 7
 ])
 
@@ -125,8 +128,10 @@ CHECK_PMD_THREADS_CREATED([2], [], [+$TMP])
 
 AT_CHECK([ovs-appctl dpif-netdev/pmd-rxq-show | sed SED_NUMA_CORE_PATTERN], [0], [dnl
 pmd thread numa_id <cleared> core_id <cleared>:
+	isolated : false
 	port: p0	queue-id: 0 2 4 6
 pmd thread numa_id <cleared> core_id <cleared>:
+	isolated : false
 	port: p0	queue-id: 1 3 5 7
 ])
 
@@ -136,6 +141,7 @@ CHECK_PMD_THREADS_CREATED([1], [], [+$TMP])
 
 AT_CHECK([ovs-appctl dpif-netdev/pmd-rxq-show | sed SED_NUMA_CORE_PATTERN], [0], [dnl
 pmd thread numa_id <cleared> core_id <cleared>:
+	isolated : false
 	port: p0	queue-id: 0 1 2 3 4 5 6 7
 ])
 
